# old-icelandic-zoega-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/dictionary/: dictionary_entry.rs  dictionary_location.rs  mod.rs
src/reader/: mod.rs
src/reader/fixtures/: test.json
tests/: integration_test.rs
tests/snapshots/: integration_test__gets_no_markup_dictionary.snap
