[package]
name = "old_icelandic_zoega"
version = "1.0.0"
authors = ["stscoundrel / Sampo Silvennoinen"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/stscoundrel/old-icelandic-zoega-rs"
description = """
Old Icelandic dictionary for Rust. From "A Concise Dictionary of Old Icelandic" by Geir Zoëga
"""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]